<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Mafia</string>
    <string name="player_name">Player Name</string>
    <string name="select_roles">Roles Selection (%1$d)</string>
    <string name="player_list">Players List</string>
    <string name="division_roles">Roles Division (%1$d)</string>
    <string name="division_roles_title">Roles Division</string>
    <string name="more">More</string>

    <string name="players_count">Number of Players: %1$d</string>
    <string name="independent_count_text">Number of Independent Roles: %1$d</string>
    <string name="citizen_count_text">Number of Citizen Roles: %1$d</string>
    <string name="mafia_count_text">Number of Mafia Roles</string>

    <string name="player_not_enough">At least 3 players must be selected</string>
    <string name="roles_not_match">The number of selected roles does not match the number of players</string>
    <string name="mafia_roles_too_much">Too many Mafia roles</string>
    <string name="player_help_message">Tap your name to uncover your secret role. then it\'s someone else\'s turn!</string>
    <string name="goto_narrator_page_desc">All players have viewed their roles.\nWould you like to enter the Narrator page?</string>
    <string name="select_all">Select All</string>
    <string name="delete_player">Delete Player</string>
    <string name="role_refresh">Refresh Roles</string>
    <string name="role_hide">Hide Roles</string>
    <string name="goto_narrator_page">Go to Narrator page</string>
    <string name="ok_button">Understand</string>
    <string name="confirm_button">OK</string>
    <string name="comma">,</string>

    <string name="settings">Settings</string>
    <string name="language">Language</string>

    <string name="about">About</string>
    <string name="source_code">Source Code</string>
    <string name="bug_report">Bug Report</string>
    <string name="user_guide">User Guide</string>

    <string name="narrator">Narrator</string>
    <string name="dead_count">Dead People: %1$d</string>
    <string name="alive_count">Alive People: %1$d</string>
    <string name="citizen_count">Citizen: %1$d</string>
    <string name="mafia_count">Mafia: %1$d</string>
    <string name="independent_count">Independent: %1$d</string>

    <string name="citizen_roles">Citizen Roles</string>
    <string name="mafia_roles">Mafia Roles</string>
    <string name="independent_roles">Independent Roles</string>

    <string name="citizen_side">Citizen</string>
    <string name="simple_citizen">Simple Citizen</string>
    <string name="doctor">Doctor</string>
    <string name="detective">Detective</string>
    <string name="sniper">Sniper</string>
    <string name="mayor">Mayor</string>
    <string name="guardian">Guardian</string>
    <string name="psychologist">Psychologist</string>
    <string name="professional">Professional</string>
    <string name="gunman">Gunman</string>
    <string name="judge">Judge</string>
    <string name="champion">Champion</string>
    <string name="priest">Priest</string>
    <string name="hacker">Hacker</string>
    <string name="angel">Angel</string>
    <string name="vigilante">Vigilante</string>
    <string name="bartender">Bartender</string>

    <string name="mafia_side">Mafia</string>
    <string name="simple_mafia">Simple Mafia</string>
    <string name="godfather">Godfather</string>
    <string name="dr_lecter">Dr.Lecter</string>
    <string name="silencer">Silencer</string>
    <string name="terrorist">Terrorist</string>
    <string name="negotiator">Negotiator</string>
    <string name="nato">NATO</string>
    <string name="vandal">Vandal</string>
    <string name="magician">Magician</string>
    <string name="hostage_taker">Hostage Taker</string>
    <string name="bodyguard">Bodyguard</string>
    <string name="bomber">Bomber</string>

    <string name="independent_side">Independent</string>
    <string name="unknown">Unknown</string>
    <string name="wolfs_rain">Werewolf</string>
    <string name="killer">Killer</string>
    <string name="thousand_faces">Thousand Faces</string>
    <string name="syndicate">Syndicate</string>


    <string name="simple_citizen_desc">Citizens are ought to detect mafia correctly during the day, but may not do anything during the night.</string>
    <string name="doctor_desc">May save a person whom he believes would be killed during the night.</string>
    <string name="detective_desc">Detective can query the side of a player during the night.</string>
    <string name="sniper_desc">Sniper is a citizen who can shoot those who he thinks are in side of the mafia.</string>
    <string name="mayor_desc">Can veto the elimination of a player they believe to be a Citizen during the voting process.</string>
    <string name="guardian_desc">Guardian can scarifies themselves against the bomb in the front a player, Killer shall be killed if they attack the Guardian.</string>
    <string name="psychologist_desc">Psychologist can silent someone in the day, as their night act.</string>
    <string name="professional_desc">Professional may not be killed during the night, unless they get drunk by the bartender.</string>
    <string name="gunman_desc">Gunman have got guns, and may give it to those who are in need.</string>
    <string name="judge_desc">They can change the result of elimination vote, that is, making it invalid.</string>
    <string name="champion_desc">They can protect someone from any harm, for a day, each two days.</string>
    <string name="priest_desc">Priest may allow a silented person to speak, if they are already allowed, they may speak for a extended time.</string>
    <string name="hacker_desc">hacker in the second night, picks three players and the narrator say count of Mafias in those.</string>
    <string name="angel_desc">Angel can return someone who has killed, once at the game.</string>
    <string name="vigilante_desc">Vigilante can protect citizen from the hostage.</string>
    <string name="bartender_desc">bartender select one person to drunk.</string>

    <string name="simple_mafia_desc">The mafia member who can speak, vote and share comments.</string>
    <string name="godfather_desc">The mafia leader. Got the final decision and don\'t tell they side to detective.</string>
    <string name="dr_lecter_desc">Can save the mafia members every night from shoots.</string>
    <string name="silencer_desc">Can silent a player next day during the night.</string>
    <string name="terrorist_desc">If Terrorist get dismissal during the day, can take someone else with they.</string>
    <string name="negotiator_desc">Negotiator can buy some simple citizen to add in mafia team.</string>
    <string name="nato_desc">If Nato can guess someone role, that player will be dismissal from the city.</string>
    <string name="vandal_desc">If select someone who has a gun, and the player use they gun during the day, the player will be dismissal from the city.</string>
    <string name="magician_desc">Can take some one role, for a day, every night.</string>
    <string name="hostage_taker_desc">Can take someone and the player can\'t use they ability.</string>
    <string name="bodyguard_desc">Until bodyguard in the game, attack to Godfather will be collect to his.</string>
    <string name="bomber_desc">Can bomb front a player.</string>

    <string name="unknown_desc">Join the side of a player who select him first.</string>
    <string name="wolfs_rain_desc">It turns a person into a werewolf every third night.</string>
    <string name="killer_desc">Killed someone every night.</string>
    <string name="thousand_faces_desc">Got role of a player who dismissal from the city, for a day.</string>
    <string name="syndicate_desc">He knows every important roles. No one can kill him during the night. The condition of victory is to stay among the last three.</string>
</resources>