<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip101"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/simple_citizen"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip102"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip103"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detective"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip104"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sniper"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip105"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/professional"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip106"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gunman"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip107"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mayor"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip108"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardian"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip109"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judge"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip110"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/champion"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip111"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priest"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip112"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psychologist"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip113"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hacker"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip114"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angel"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip115"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vigilante"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip116"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bartender"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>