<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/citizen"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detective"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sniper"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/professional"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip6"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gunman"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip7"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mayor"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip8"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardian"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip9"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judge"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip10"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/champion"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip11"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priest"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip12"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psychologist"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip13"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hacker"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip14"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/angel"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip15"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vigilante"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip16"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bartender"
            android:textColor="@color/citizenchip_text"
            app:checkedIconTint="@color/citizenchip_text"
            app:chipBackgroundColor="@color/citizenchip_background"
            app:chipStrokeColor="@color/citizenchip_stroke" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>