<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip31"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/unknown"
            android:textColor="@color/independentchip_text"
            app:checkedIconTint="@color/independentchip_text"
            app:chipBackgroundColor="@color/independentchip_background"
            app:chipStrokeColor="@color/independentchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip32"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wolfs_rain"
            android:textColor="@color/independentchip_text"
            app:checkedIconTint="@color/independentchip_text"
            app:chipBackgroundColor="@color/independentchip_background"
            app:chipStrokeColor="@color/independentchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip32"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/killer"
            android:textColor="@color/independentchip_text"
            app:checkedIconTint="@color/independentchip_text"
            app:chipBackgroundColor="@color/independentchip_background"
            app:chipStrokeColor="@color/independentchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip33"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thousand_faces"
            android:textColor="@color/independentchip_text"
            app:checkedIconTint="@color/independentchip_text"
            app:chipBackgroundColor="@color/independentchip_background"
            app:chipStrokeColor="@color/independentchip_stroke" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip35"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/syndicate"
            android:textColor="@color/independentchip_text"
            app:checkedIconTint="@color/independentchip_text"
            app:chipBackgroundColor="@color/independentchip_background"
            app:chipStrokeColor="@color/independentchip_stroke" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>